tweaking accordion back to row; font-awesome working; alignments correct; .3

--- a/src/_themes/espnplus/scss/_global_toc.scss
+++ b/src/_themes/espnplus/scss/_global_toc.scss
@@ -18,6 +18,7 @@ section.terms-conditions {
         margin: 0;
         padding: 0;
 
+        div,
         p {
             width: 80%;
             margin: 0 auto;   
